What I was trying to create was the Virion library.

--- a/.poggit.yml
+++ b/.poggit.yml
@@ -3,5 +3,7 @@ build-by-default: true
 branches:
   - master
 projects:
-  PluginUtils: []
+  PluginUtils:
+    type: library
+    model: virion
 ...
